--- a/astro-pnpm/src/components/Welcome.astro
+++ b/astro-pnpm/src/components/Welcome.astro
@@ -3,6 +3,7 @@ import astroLogo from '../assets/astro.svg';
 import background from '../assets/background.svg';
 ---
 
+<a href="/about">ir a about</a>
 <div id="container">
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
